# Pixel-Angler-The-Real

./: .env.example  .gitignore  CLAUDE.md  README.md  chum_guide_popup.html  game_guide_hub.html  index.html  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json  격자3단계_격자번호.xlsx  기상청41_단기예보 조회서비스_오픈API활용가이드_260623.docx  기상청41_단기예보 조회서비스_오픈API활용가이드_격자_위경도(2607).xlsx  농림수산식품교육문화정보원_경락가격 가격 조회_20230911.csv  오픈API 활용가이드_자연과학용 수심정보.hwp  오픈API 활용가이드_조석예보(고, 저조).hwp
.agents/: AGENTS.md  FP_RIG_ROD_SPEC.md  FP_VIEW_V2_SPEC.md  IMPLEMENTATION_PLAN.md
apps/tauri-wrapper/: package.json
apps/tauri-wrapper/src-tauri/: Cargo.toml  tauri.conf.json
assets/: index-BHJ87ph8.js  index-BKg0LNQQ.js  index-BqyzDFmY.js  index-CTuPDrvZ.js  index-CkvdYjum.js  index-CtA2YDxj.js  index-D2uKTmwv.js  index-JnNMFWJl.js  index-NvQomJ96.js
data/busan/: busan_baegunpo_2.json  busan_gamcheon_west_1.json
data/sokcho/: sokcho_dongmyeonghang_1.json  sokcho_dongmyeonghang_3.json  sokcho_sokchohang_1.json  sokcho_sokchohang_dongmyeonghang.json
tools/: build_depth_profiles.py  build_map.py  build_region_maps.py  pixelize.py
