[package]
name = "the-real-angler"
version = "0.1.0"
description = "Tauri wrapper app for Pixel Angler The Real"
authors = ["Pixel Angler Dev Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
panic = "abort" # Strip debug symbols and reduce binary size
codegen-units = 1
lto = true
opt-level = "z"
strip = true
